mencoba membuat formulir dan tabel

--- a/Biodata.html
+++ b/Biodata.html
@@ -37,7 +37,7 @@
 
     <p>
       untuk informasi lebih lanjut kunjungi
-      <a href="https://github.com/dashboard" target="_blank">github saya</a>
+      <a href=https://github.com/zakypacartifa" target="_blank">github saya</a>
     </p>
 
     <h2>Hobi saya</h2>
@@ -47,10 +47,57 @@
       <li>Tidur</li>
     </ul>
 
+    <h2>Riwayat Pendidikan</h2>
     <ol>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>MI Insan Mulia</li>
+      <li>SMP Negeri 2 Kuta Selatan</li>
+      <li>SMK TI Bali Global Jimbaran</li>
     </ol>
+
+    <h2>Jadwal Kuliah Semester 3</h2>
+    <table="1">
+      <tr>
+        <th>Hari</th>
+        <th>Mata Kuliah</th>
+        <th>Waktu</th>
+      </tr>
+      <tr>
+        <th>Senin</th>
+        <th>Pemrogaman Web</th>
+        <th>11:50 - 15:10</th>
+      </tr>
+      <tr>
+        <th>Selasa</th>
+        <th>Cyber Security</th>
+        <th>11:50 - 15:10</th>
+      </tr>
+      <tr>
+        <th>Rabu</th>
+        <th>Konfigurasi</th>
+        <th>11:50 - 15:10</th>
+      </tr>
+      <tr>
+        <th>Kamis</th>
+        <th>Metopen</th>
+        <th>11:50 - 15:10</th>
+      </tr>
+    </table>
+
+    <h2>Formulir Kontak</h2>
+    <form action="submit_form.php" method="post">
+      <label for="name">Nama Lengkap :</label>
+      <input type="text" id="name" name="fullname" required /><br /><br />
+
+      <label for="email">Email :</label>
+      <input type="email" id="email" name="emailadd" required /><br /><br />
+
+      <label for="telepon">Nomor Teleppon</label>
+      <input
+        type="tel"
+        id="telepon"
+        name="telepon"
+        placeholder="08-xxx-xxx-xx"
+      />
+    </form>
   </body>
 </html>
