menambahkan foto dan membuat button submit

--- a/Biodata.html
+++ b/Biodata.html
@@ -33,11 +33,16 @@
 
     <h2>Proyek Terakhir</h2>
     <p>Berikut ini adalah proyek terakhir yang telah saya kerjakan:</p>
-    <img src="" alt="" />
+    <img
+      src="project-planning-header@2x.png"
+      alt="contoh proyek saya"
+      width="600"
+      height="200"
+    />
 
     <p>
       untuk informasi lebih lanjut kunjungi
-      <a href=https://github.com/zakypacartifa" target="_blank">github saya</a>
+      <a href="https://github.com/zakypacartifa" target="_blank">github saya</a>
     </p>
 
     <h2>Hobi saya</h2>
@@ -55,7 +60,7 @@
     </ol>
 
     <h2>Jadwal Kuliah Semester 3</h2>
-    <table="1">
+    <table ="1">
       <tr>
         <th>Hari</th>
         <th>Mata Kuliah</th>
@@ -98,6 +103,7 @@
         name="telepon"
         placeholder="08-xxx-xxx-xx"
       />
+      <button type="submitx">KIRIM</button>
     </form>
   </body>
 </html>
