--- a/Biodata.html
+++ b/Biodata.html
@@ -60,31 +60,31 @@
     </ol>
 
     <h2>Jadwal Kuliah Semester 3</h2>
-    <table ="1">
+    <table border="1">
       <tr>
         <th>Hari</th>
         <th>Mata Kuliah</th>
         <th>Waktu</th>
       </tr>
       <tr>
-        <th>Senin</th>
-        <th>Pemrogaman Web</th>
-        <th>11:50 - 15:10</th>
+        <td>Senin</td>
+        <td>Pemrogaman Web</td>
+        <td>11:50 - 15:10</td>
       </tr>
       <tr>
-        <th>Selasa</th>
-        <th>Cyber Security</th>
-        <th>11:50 - 15:10</th>
+        <td>Selasa</td>
+        <td>Cyber Security</td>
+        <td>11:50 - 15:10</td>
       </tr>
       <tr>
-        <th>Rabu</th>
-        <th>Konfigurasi</th>
-        <th>11:50 - 15:10</th>
+        <td>Rabu</td>
+        <td>Konfigurasi</td>
+        <td>11:50 - 15:10</td>
       </tr>
       <tr>
-        <th>Kamis</th>
-        <th>Metopen</th>
-        <th>11:50 - 15:10</th>
+        <td>Kamis</td>
+        <td>Metopen</td>
+        <td>11:50 - 15:10</td>
       </tr>
     </table>
 
@@ -106,4 +106,13 @@
       <button type="submitx">KIRIM</button>
     </form>
   </body>
+</html>
+
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Biodata diri Kevin Azzaky</title>
+  </head>
+  <body></body>
 </html>
