tugas pratikum : membuat profil dan menambahkan foto dan biografi

--- a/Biodata.html
+++ b/Biodata.html
@@ -114,5 +114,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Biodata diri Kevin Azzaky</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Profil Kevin Azzaky</h1>
+
+    <img src="profil.jpg" alt="foto profil" width="100" />
+    <p>
+      Halo Saya Renald Kevin Azzaky saya dari kampus Universitas Pendidikan
+      Nasional disini saya mengambil Fakultas Teknik dan Informatika dengan
+      mengabil jurusan Teknologi Informasi Saya juga memiliki ketertarikan
+      dengan pengembangan web, saya ingin banyak belajar tentang website
+    </p>
+  </body>
 </html>
