Tugas Pratikum : Membuat Link Ke Media sosial dan portofolio online. Dan membuat tabel pendidikan

--- a/Biodata.html
+++ b/Biodata.html
@@ -124,5 +124,43 @@
       mengabil jurusan Teknologi Informasi Saya juga memiliki ketertarikan
       dengan pengembangan web, saya ingin banyak belajar tentang website
     </p>
+
+    <p>Anda Dapat menghubungi saya melalui email ini</p>
+    <a href="kevinazzaky1@gmail.com">kevinazzaky1@gmail.com</a>
+
+    <p>Atau bisa mengunjungi Github Saya</p>
+    <a href="https://github.com/zakypacartifa" target="_blank"
+      >Github Kevin Azzaky</a
+    >
+    <br />
+    <br />
+
+    <table border="2">
+      <tr>
+        <th>Jenjang</th>
+        <th>Nama Institusi</th>
+        <th>Tahun</th>
+      </tr>
+      <tr>
+        <td>SD</td>
+        <td>MI Insan Mulia</td>
+        <td>2012 - 2018</td>
+      </tr>
+      <tr>
+        <td>SMP</td>
+        <td>SMP Negeri 2 Kuta Selatan</td>
+        <td>2018 - 2021</td>
+      </tr>
+      <tr>
+        <td>SMK</td>
+        <td>SMK TI Bali Global Jimbaran</td>
+        <td>2021 - 2024</td>
+      </tr>
+      <tr>
+        <td>Kuliah</td>
+        <td>Universitas Pendidikan Nasional Denpasar</td>
+        <td>2024 - Saat Ini</td>
+      </tr>
+    </table>
   </body>
 </html>
