Tugas Pratikum : membuat formulir kontak

--- a/Biodata.html
+++ b/Biodata.html
@@ -103,7 +103,7 @@
         name="telepon"
         placeholder="08-xxx-xxx-xx"
       />
-      <button type="submitx">KIRIM</button>
+      <button type="submit">KIRIM</button>
     </form>
   </body>
 </html>
@@ -162,5 +162,15 @@
         <td>2024 - Saat Ini</td>
       </tr>
     </table>
+    <h1>Formulir Kontak</h1>
+    <form action="#" method="post">
+      <label for="name">Nama Lengkap :</label>
+      <input type="text" name="fullname" id="name" required /><br /><br />
+
+      <label for="email"> Email :</label>
+      <input type="email" id="email" name="emailadd" required /><br /><br />
+
+      <button type="submit">Kirim</button>
+    </form>
   </body>
 </html>
