--- a/html dan css/Biodata.html
+++ b/html dan css/Biodata.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Biodata Kevin Azzaky</title>
+    <link rel="stylesheet" href="">
   </head>
-  <body>
-    <h1>Profil mahasiswa</h1>
+  <!-- <body>
+    <h1 class="warna">Profil mahasiswa</h1>
 
     <h1>Biografi</h1>
 
@@ -106,7 +107,7 @@
       <button type="submit">KIRIM</button>
     </form>
   </body>
-</html>
+</html> -->
 
 <html lang="en">
   <head>
